# tvt

./: .env.example  .gitignore  CHECKPOINT_V3.0.md  CHECKPOINT_V4.0.md  CHECKPOINT_V4.0_PLANNING.md  CHECKPOINT_V4.1.md  PROJECT_DNA.md  README.md  SNAPSHOT_V3.0.md  Start.bat  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backups/v3.0.0_snapshot_2026-04-09/: CHECKPOINT_V2.1.md  PROJECT_DNA.md  README.md  TVT_System_Construction.md
backups/v3.0.0_snapshot_2026-04-09/docs/: sw.js
backups/v3.0.0_snapshot_2026-04-09/docs/css/: tvt.css
backups/v3.0.0_snapshot_2026-04-09/docs/js/: ai-providers.js  app.js
backups/v3.0.0_snapshot_2026-04-09/tvt/: __init__.py
backups/v3.0.0_snapshot_2026-04-09/tvt/core/: i18n.py  llm_client.py  utils.py
backups/v3.0.0_snapshot_2026-04-09/tvt/i18n/: en.yaml
backups/v3.0.0_snapshot_2026-04-09/tvt/storage/: .gitkeep
backups/v3.0.0_snapshot_2026-04-09/tvt/webui/: __init__.py  app.py
docs/: index.html  manifest.json  sw.js
docs/css/: community.css  tvt.css
docs/js/: ai-providers.js  app.js  community.js  models.js  tvt-core.js
tests/: __init__.py  test_core.py
tvt/: cli.py
tvt/core/: __init__.py  llm_client.py  model_loader.py  orchestrator.py  session.py
tvt/i18n/: vi.yaml
tvt/models/: 5w1h.yaml  swot.yaml
tvt/webui/: app.py
